# dremioUI

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: __init__.py  config.py  dependencies.py  dremio.py  main.py  models.py  qna.py  rbac.py  session_store.py
docs/: architecture.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
tests/: test_backend.py
